fix: hide both x and y axis scrollbars

--- a/web/classic/src/index.css
+++ b/web/classic/src/index.css
@@ -23,7 +23,7 @@
 /* 隐藏首页和登录页滚动条 */
 html,
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 html::-webkit-scrollbar,
